v1.3.7 (2018.12.xx)
  - Update SQLite database engine to version 3.26.0
  - Update cURL library to version 7.62.0
  - Improve performance of Recorded TV last played (resume) position discovery

v1.3.6 (2018.12.01)
  - Fix bug in DVR stream packet filter causing an access violation if a PSI packet with a table ID of 0xFF is encountered

v1.3.5 (2018.10.13)
  - Update SQLite database engine to version 3.25.2
  - Automatically delete and recreate the PVR database if any exceptions occur opening it during startup
  - Fix bug causing internal exception when trying to poke the HDHomeRun RECORD engine after deleting a recording rule
  - Change EPG broadcast identifier values to be based on a hash of the channel and program start/end times

v1.3.4 (2018.09.21)
  - Update SQLite database engine to version 3.25.1
  - Update cURL library to version 7.61.1
  - (Linux/Raspbian/OSX) Fix bug allowing internal debug assertions to be raised erroneously and terminating Kodi
  - Fix bug introduced in v1.2.10 causing default cURL progress meter to be written to stdout

v1.3.3 (2018.08.22)
  - Treat discovery errors generated during PVR startup as non-fatal and continue execution of remaining discovery tasks
  - Abort device discovery if no tuner devices were discovered; leave existing device and channel lineup information intact
  - Add "Demo Channels" channel group

v1.3.2 (2018.08.13)
  - Update cURL library to version 7.61.0
  - Fix bug causing HTTP stream to remain in a paused state indefinitely if the ring buffer has been completely filled
  - Remove "DVR stream read operation timeout (milliseconds)" advanced option
  - Fix bug causing potential access violation when system is suspended during an active Live TV or Recorded TV stream
  - Apply workaround for SQLite database engine concern causing some HTTP queries to be executed multiple times
  - (UWP) Initial release of modified APPX packages for Universal Windows Platform Win32 and x64 targets

v1.3.1 (2018.08.05)