@@ -2,6 +2,7 @@ v1.3.7 (2018.12.xx)
   - Update SQLite database engine to version 3.26.0
   - Update cURL library to version 7.62.0
   - Improve performance of Recorded TV last played (resume) position discovery
+  - Prevent reporting timeshift buffer information for non-seekable realtime streams
 
 v1.3.6 (2018.12.01)
   - Fix bug in DVR stream packet filter causing an access violation if a PSI packet with a table ID of 0xFF is encountered
